--- a/DesignerRHN/DesignerRHN-war/web/iniciored.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/iniciored.xhtml
@@ -26,9 +26,8 @@
             <p:growl id="informacionAcceso"  showDetail="true"/> 
             <fieldset style="position: absolute; left: 250px; top: 10px; font-size: 12px; width: 835px; height: 100px; border-radius: 10px;  background-image: url(Imagenes/fondoencabezado.png); background-repeat: no-repeat; background-size: 150% 100%; box-shadow: 5px 5px 12px #000000">
                 <strong>
-                    <h:outputText value="Designer.RHN Versión 12C" style="position: absolute; font-size: 14px; left: 670px"/>
+                    <h:outputText value="Designer.RHN Versión 2014" style="position: absolute; font-size: 14px; left: 670px"/>
                     <h:outputText value="Gerencia Integral en RHN y Nómina" style="position: absolute; font-size: 14px; left: 615px; top: 25px"/>
-                    <h:outputText value="Versión 1.0" style="position: absolute; font-size: 14px; left: 768px; top: 45px"/>
                     <h:outputText value="Licencia de uso a:" style="position: absolute; font-size: 14px; left: 450px; top: 85px"/>
                     <h:outputText id="nombreEmpresa" value="#{controlInicioRed.nombreEmpresa}" style="position: absolute; font-size: 14px; left: 540px; top: 85px; width: 300px; text-align: right"/>
                 </strong>
